# accessnine_shoppingai_RAG

./: pyproject.toml
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
src/accessnine_shoppingai_rag/: __init__.py  agent.py  main.py  server.py
